# RestAPISQLAlchemyContactManagerV4

./: README.md  api.rst  docker-compose.yaml  main.py  main_tests.py  models.py  pyproject.toml  requirements.txt  schemas.py
api/: api_tests.py  apis.py  config.py  endpoints.py  routes.py
auth/: auth_tests.py  auths.py  jwts.py
db/: data_faker.py  data_sender.py  db_tests.py  dbs.py
source/: conf.py  index.rst  main.rst
templates/: base.html  contacts.html  index.html  login,html  register.html  verify.html  welcome.html
